[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "cython",
    "pysam",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "dysgu"
version = "1.7.0"
description = "Structural variant calling"
authors = [
    { name = "Kez Cleal", email = "clealk@cardiff.ac.uk" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "setuptools >= 61.0",
    "cython",
    "click >= 8.0",
    "numpy",
    "scipy",
    "pandas",
    "pysam >= 0.22",
    "networkx >= 2.4",
    "scikit-learn >= 0.22",
    "sortedcontainers",
    "lightgbm"
]

[project.urls]
Homepage = "https://github.com/kcleal/dysgu"

[project.scripts]
dysgu = "dysgu.main:cli"

[tool.setuptools]
packages = ["dysgu", "dysgu.tests", "dysgu.scikitbio", "dysgu.edlib", "dysgu.sortedintersect"]

[tool.setuptools.package-data]
"dysgu" = ["*.pxd", "*.pyx"]
