[build-system]
requires = [
    "meson-python>=0.14.0",
    "wheel",
    "cython",
    "pysam",
    "numpy",
]
build-backend = "mesonpy"

[project]
name = "dysgu"
version = "1.8.4"
description = "Structural variant calling"
authors = [
    { name = "Kez Cleal", email = "clealk@cardiff.ac.uk" }
]
license = "MIT"
license-files = [
    "LICENSE.md",
]
requires-python = ">=3.9"
dependencies = [
    "cython",
    "click >= 8.0",
    "numpy",
    "scipy",
    "pandas",
    "pysam >= 0.23",
    "networkx >= 2.4",
    "scikit-learn >= 0.22",
    "sortedcontainers",
    "superintervals >= 0.2.10",
    "lightgbm"
]

[project.urls]
Homepage = "https://github.com/kcleal/dysgu"

[project.scripts]
dysgu = "dysgu.main:cli"

[tool.setuptools]
packages = [
    "dysgu",
    "dysgu.tests",
    "dysgu.scikitbio",
    "dysgu.edlib",
    "dysgu.gfftool"
]

[tool.setuptools.package-data]
"dysgu" = ["*.pxd", "*.pyx", "LICENSE.md"]

[tool.meson-python.args]
setup = []
